sumo/tests/sumo/output/meanhbefa_lanebased/errors/false_order/errors.sumo
Error: The 'begin' at position 2 is not smaller than the according 'end' for meandata-lane 'dump_15'.
Error: The 'begin' at position 2 is not smaller than the according 'end' for meandata-lane 'dump_60'.
Quitting (on error).
